# uat-orchestrator

./: .env.example  .gitignore  README.md  pyproject.toml
config/: agents.yaml
docs/: hr-expert-example.md
docs/onboarding/: EXPERT_AGENT.md  QUICK_START.md
pipes/: aaif_orchestrator_pipe.py
